// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > review > postReviewRole > audit > expected call 1`] = `
{
  "id": "my-role-125",
  "name": "Reviewer",
  "short": "msro",
}
`;

exports[`routes > review > postReviewRole > creates and returns new review role 1`] = `
{
  "reviewRole": {
    "id": "my-role-125",
    "name": "Reviewer",
    "short": "msro",
  },
}
`;
